// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button link unchanged 1`] = `
<div>
  <a
    class="sc-b5032cbd-1 grygJQ undefined "
  >
    button test
  </a>
</div>
`;

exports[`Button renders form Button unchanged 1`] = `
<div>
  <button
    class="sc-b5032cbd-2 lmEeif"
  >
    button test
  </button>
</div>
`;
